using object-fit to solve issues with cropping

--- a/src/demo.css
+++ b/src/demo.css
@@ -1,14 +1,14 @@
 @supports (--custom: property) {
-  [style*="--aspect-ratio"] {
-    position: relative;
-  }
-  [style*="--aspect-ratio"]::before {
+  [style*="--aspect-ratio"]::before,
+  .aspect-ratio::before {
     content: "";
     display: block;
     padding-bottom: calc(100% / (var(--aspect-ratio)));
   }
   [style*="--aspect-ratio"] > :first-child,
-  [style*="--aspect-ratio"] > picture {
+  [style*="--aspect-ratio"] > picture,
+  .aspect-ratio > :first-child,
+  .aspect-ratio > picture {
     position: absolute;
     top: 0;
     left: 0;
@@ -19,8 +19,12 @@
     justify-content: center;
   }
 }
-.dyn_wrapper [style*="--aspect-ratio"]:first-child,
-.dyn_wrapper [style*="--aspect-ratio"] > picture {
+
+.dyn_wrapper {
+  position: relative;
+}
+.dyn_wrapper > :first-child,
+.dyn_wrapper > picture {
   width: 100%;
 }
 .dyn_wrapper img {
@@ -29,21 +33,18 @@
 }
 .dyn_wrapper.dyn_crop {
   overflow: hidden;
+  position: relative;
 }
-.dyn_wrapper.dyn_crop[style*="--aspect-ratio"] > :first-child[data-dyn_crop] {
+.dyn_wrapper.dyn_crop > :first-child[data-dyn_crop] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.dyn_wrapper.dyn_crop.dyn_orient_wrapper-landscape img {
-  max-width: none !important;
-  width: auto;
-  height: 100%;
-}
-.dyn_wrapper.dyn_crop.dyn_orient_wrapper-portrait img {
-  max-width: none !important;
+.dyn_wrapper.dyn_crop img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .dyn_wrapper.dyn_crop [data-dyn_lqip=separate] {
   max-width: none;
@@ -55,11 +56,8 @@
   height: auto;
   max-width: 100%;
   max-height: 100%;
-}
-.dyn_wrapper.dyn_contain.dyn_orient_wrapper-landscape.dyn_orient_src-portrait img {
-  width: auto;
-  height: 100%;
-  max-width: none;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .dyn_fadebox picture {
