--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,27 @@
-@supports (--custom: property) {
-	// support aspect ratio by using padding-bottom
-	[style*="--aspect-ratio"] {
-		position: relative;
-	}
-	[style*="--aspect-ratio"]::before {
-		content: "";
-		display: block;
-		padding-bottom: calc(100% / (var(--aspect-ratio)));
-	}
-	[style*="--aspect-ratio"] > :first-child,
-	[style*="--aspect-ratio"] > picture {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+@mixin aspect-ratio {
+	@supports (--custom: property) {
+		&::before {
+			content: "";
+			display: block;
+			padding-bottom: calc(100% / (var(--aspect-ratio)));
+		}
+		> :first-child,
+		> picture {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 	}
 }
 @mixin dyn-wrapper {
-	[style*="--aspect-ratio"]:first-child,
-	[style*="--aspect-ratio"] > picture {
+	position: relative;
+	> :first-child,
+	> picture {
 		width: 100%;
 	}
 	img {
@@ -32,20 +31,16 @@
 }
 @mixin dyn-crop {
 	overflow: hidden;
-	&[style*="--aspect-ratio"] > :first-child[data-dyn_crop] {
+	position: relative;
+	> :first-child[data-dyn_crop] {
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
-	&.dyn_orient_wrapper-landscape img {
-		max-width: none !important;
-		width: auto;
-		height: 100%;
-	}
-	&.dyn_orient_wrapper-portrait img {
-		max-width: none !important;
+	img {
 		width: 100%;
-		height: auto;
+		height: 100%;
+		object-fit: cover;
 	}
 	[data-dyn_lqip="separate"] {
 		max-width: none;
@@ -59,12 +54,12 @@
 		height: auto;
 		max-width: 100%;
 		max-height: 100%;
+		object-fit: contain;
 	}
-	&.dyn_orient_wrapper-landscape.dyn_orient_src-portrait img {
-		width: auto;
-		height: 100%;
-		max-width: none;
-	}
+}
+[style*="--aspect-ratio"],
+.aspect-ratio {
+	@include aspect-ratio;
 }
 .dyn_wrapper {
 	@include dyn-wrapper;
